# variPEPS_Python

./: .dir-locals.el  .gitignore  .readthedocs.yml  .zenodo.json  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  general.rst  index.rst  license.rst
docs/source/api/: config.rst  index.rst  typing.rst
docs/source/api/contractions/: apply.rst  definitions.rst  index.rst
docs/source/api/ctmrg/: absorption.rst  index.rst  projectors.rst  routine.rst
docs/source/api/expectation/: four_sites.rst  index.rst  model.rst  one_site.rst  spiral_helpers.rst  three_sites.rst  two_sites.rst
docs/source/api/mapping/: florett_pentagon.rst  honeycomb.rst  index.rst  kagome.rst  maple_leaf.rst  square_kagome.rst  triangular.rst
docs/source/api/optimization/: basinhopping.rst  index.rst  inner_function.rst  line_search.rst  optimizer.rst
docs/source/api/peps/: index.rst  tensor.rst  unitcell.rst
docs/source/api/utils/: debug_print.rst  index.rst  periodic_indices.rst  projector_dict.rst  random.rst  svd.rst
docs/source/design/: features.rst
docs/source/examples/: heisenberg_afm_square.rst  heisenberg_afm_triangular.rst  index.rst
docs/source/images/: CTMRG_Absorption_D_C3.tex  CTMRG_Absorption_D_C4.tex  CTMRG_Absorption_D_T3.tex  CTMRG_Absorption_L_C1.tex  CTMRG_Absorption_L_C4.tex  CTMRG_Absorption_L_T4.tex  CTMRG_Absorption_R_C2.tex  CTMRG_Absorption_R_C3.tex  CTMRG_Absorption_R_T2.tex  CTMRG_Absorption_U_C1.tex  CTMRG_Absorption_U_C2.tex  CTMRG_Absorption_U_T1.tex  Makefile  ctmrg_bottom_left.tex  ctmrg_bottom_left_large_d.tex  ctmrg_bottom_right.tex  ctmrg_bottom_right_large_d.tex  ctmrg_top_left.tex  ctmrg_top_left_large_d.tex  ctmrg_top_right.tex  ctmrg_top_right_large_d.tex  floret_pentagon_bond_colors.tex  floret_pentagon_structure.tex  honeycomb_structure.tex  kagome_structure.tex  logo.tex  maple_leaf_structure.tex  square_kagome_structure.tex  square_lattice.tex  triangular_lattice.tex  triangular_structure.tex
docs/source/images/varipeps/: Makefile
docs/source/varipeps/: unitcell.rst  varipeps.rst
examples/: README.md  heisenberg_afm_square.ipynb  heisenberg_afm_square.py  heisenberg_afm_triangular.ipynb  heisenberg_afm_triangular.py
peps_ad/: __init__.py  __version__.py  config.py  global_state.py  typing.py
peps_ad/contractions/: __init__.py  apply.py  definitions.py
peps_ad/ctmrg/: __init__.py  absorption.py  projectors.py  routine.py
peps_ad/expectation/: __init__.py  model.py  one_site.py  spiral_helpers.py  three_sites.py  two_sites.py
peps_ad/mapping/: __init__.py  florett_pentagon.py  honeycomb.py  kagome.py  maple_leaf.py  model.py  square_kagome.py  triangular.py
peps_ad/models/: hamiltonian.py
peps_ad/optimization/: __init__.py  basinhopping.py  inner_function.py  line_search.py  optimizer.py
peps_ad/peps/: __init__.py  tensor.py  unitcell.py
peps_ad/utils/: __init__.py  debug_print.py  periodic_indices.py  random.py  svd.py
varipeps/: __init__.py  __version__.py  config.py  global_state.py  typing.py
varipeps/contractions/: apply.py  definitions.py
varipeps/corrlength/: __init__.py  corrlength.py  triangular_corrlength.py
varipeps/ctmrg/: __init__.py  absorption.py  projectors.py  routine.py  structure_factor_absorption.py  structure_factor_routine.py  triangular_absorption.py  triangular_projectors.py
varipeps/expectation/: __init__.py  four_sites.py  helpers.py  model.py  one_site.py  spiral_helpers.py  structure_factor.py  three_sites.py  triangular_helpers.py  triangular_next_nearest.py  triangular_one_site.py  triangular_two_sites.py  two_sites.py
varipeps/mapping/: florett_pentagon.py  honeycomb.py  kagome.py  maple_leaf.py  model.py  square_kagome.py  triangular.py
varipeps/optimization/: __init__.py  basinhopping.py  inner_function.py  line_search.py  optimizer.py
varipeps/overlap/: __init__.py  overlap.py  overlap_four_sites.py  overlap_single_site.py
varipeps/peps/: __init__.py  tensor.py  unitcell.py
varipeps/utils/: __init__.py  debug_print.py  func_cache.py  logging_config.py  periodic_indices.py  projector_dict.py  random.py  slurm.py  svd.py
varipeps/utils/extensions/: svd_ffi.cpp  svd_ffi.h
