[project]
name = "variPEPS"
version = "1.0.1"
description = "Versatile tensor network library for variational ground state simulations in two spatial dimensions"
authors = [
    {name = "Jan Naumann", email = "j.naumann@fu-berlin.de"},
    {name = "Philipp Schmoll", email = "philipp.schmoll@fu-berlin.de"},
    {name = "Frederik Wilde"},
    {name = "Finn Krein"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.21.2",
    "scipy >= 1.7.1",
    "jax[cpu]>=0.5.3",
    "tensornetwork >= 0.4.5",
    "h5py >= 3.6.0",
    "tqdm[notebook] >= 4.64.1",
    "tqdm-loggable >= 0.1.3",
]
keywords = [
    "physics",
    "automatic-differentiation",
    "peps",
    "tensor-networks",
    "variational-optimization",
    "quantum-many-body",
    "quantum-many-body-physics"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Documentation = "https://varipeps.readthedocs.io/en/stable/"
Repository = "https://github.com/variPEPS/variPEPS_Python"
Issues = "https://github.com/variPEPS/variPEPS_Python/issues"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipython>=8.31.0",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
